--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <body>
 <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);">
-<div style="text-align: center;">
+<div style="text-align: center;max-width: 800px;margin: auto;">
 <h1 id="toc1"><span><strong>Досье Учреждения Фонда SCP</strong></span></h1>
 <h2 id="toc2"><span><strong>Зона содержания 78N</strong></span></h2>
-<p><strong>Официальное обозначение:</strong> Метеорологическая станция Курун-Урях</p>
+<p><strong>Официальное обозначение:</strong> Аяно-Майское учреждение исследования и содержания при фонде SCP</p>
 <p><strong>Идентификационный код Зоны:</strong> RCSS-SITE-78N</p>
 </div>
 <hr>
@@ -15,7 +15,7 @@
 <br>
 <strong>Дата основания:</strong> [ОЖИДАЕТ РАСШИФРОВКИ]
 <p><strong>Директор зоны:</strong> Марков Э.</p>
-<img src="https://i.ibb.co/7QwBDMZ/site78n.png" alt="site78n" border="0"><br>
+<div style='float: right;'><img src="https://i.ibb.co/7QwBDMZ/site78n.png" width='30%' alt="site78n" border="0"></div>
 <strong>Расположение:</strong> Аяно-Майский район, Хабаровский край, Россия
 <p><strong>Прикрытие:</strong> Метеостанция Курун-Урях</p>
 <p><strong>Функции Зоны:</strong> Содержание SCP объектов класса безопасный и евклид, исследование аномалий, обучение персонала, хранение аномальных предметов.</p>
@@ -25,12 +25,7 @@
 <div style="text-align: center;">
 <h2 id="toc4"><span>Помещения</span></h2>
 </div>
-<div class="scp-image-block block-right" style="width:250px;"><a href="http://funclubunofficialzone78n.wdfiles.com/local--files/zone78ninfo/site78n-plan"><img src="http://funclubunofficialzone78n.wdfiles.com/local--resized-images/zone78ninfo/site78n-plan/medium.jpg" style="width:250px;" alt="site78n-plan" class="image"></a>
-<div class="scp-image-caption" style="width:250px;">
-<p>Схема зоны 78N в разрезе</p>
-</div>
-</div>
-<br>
+<div style='float: right;'><a href="https://i.ibb.co/0B3YRtF/site78nplan.png"><img src="https://i.ibb.co/0B3YRtF/site78nplan.png" alt="план зоны 78N в разрезе" border="0"></a></div>
 <strong>Поверхность:</strong><br>
 Главные офисы, жилые помещения, медицинский центр, складские помещения.
 <p><strong>Комплекс:</strong><br>
@@ -40,16 +35,18 @@
 <div style="text-align: center;">
 <hr>
 <h2 id="toc5"><span>Персонал</span></h2>
-<div style="background: url(&quot;https://scp-wiki.wdfiles.com/local--files/the-great-hippo/scp_trans.png&quot;) center no-repeat; float: center; border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
-<h1 id="toc6"><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SHINIGAMI ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h1>
-<hr>
-<h3 id="toc7"><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h3>
+<div style=" border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
+<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SHINIGAMI ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
+<h5 id="toc7"><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
 </div>
 </div>
 <div style="text-align: justify;">
 <div style="text-align: center;">
 <h2 id="toc8"><span>Объекты, находящиеся на содержании зоны 78N</span></h2>
-<p><a href="/zone78nscps">(нажмите, чтобы ознакомится со списком)</a></p>
+<div style="border: solid 2px #000; padding: 1px 15px; box-shadow: 0 1px 3px rgba(0,0,0,.2);">
+<h5><span>ВНИМАНИЕ! В СВЯЗИ С ИНЦИДЕНТОМ-78N-SHINIGAMI ДАННАЯ ИНФОРМАЦИЯ ВРЕМЕННО НЕДОСТУПНА</span></h5>
+<h5 id="toc7"><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
+</div>
 <hr>
 <h2 id="toc9"><span>Дополнительная информация</span></h2>
 </div>
