--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);">
-<div style="text-align: center;max-width: 800px;margin: auto;">
+<div class='header'>
+  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><p class='text-header'>Зона 78N</p>
+</div>
+  <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
+<div style="text-align: center;">
 <h1 id="toc1"><span><strong>Досье Учреждения Фонда SCP</strong></span></h1>
 <h2 id="toc2"><span><strong>Зона содержания 78N</strong></span></h2>
 <p><strong>Официальное обозначение:</strong> Аяно-Майское учреждение исследования и содержания при фонде SCP</p>
@@ -48,9 +51,7 @@
 <h5 id="toc7"><span>ОТЧЕТ ОБ ИНЦИДЕНТЕ НАПРАВЛЕН В ОВБ</span></h5>
 </div>
 <hr>
-<h2 id="toc9"><span>Дополнительная информация</span></h2>
-</div>
-<br>
+<h2 id="toc9"><span>Дополнительная информация</span></h2></div>
 Зона 78N была первоначально создана как складской сектор содержания аномальных предметов, не обладающих достаточными аномальными свойствами для классификации их как отдельных SCP объектов, но по мере развития приобрела и другие функции, такие как исследовательские и содержательные. Благодаря относительной безопасности зоны, она так же стала местом начала стажировки и обучения многих сотрудников Фонда. Географическое положение участка привлекает многих специалистов из Японии, Кореи, Китая. Зона представляет малую ценность для групп интереса, рейды враждебных группировок явление крайне редкое. Ввиду специфики зоны, она не обладает ядерным зарядом Alpha/Omega, тем не менее в конструкции предусмотрен взрывоустойчивый слой из титана (Ti) - 10м, свинца (Pb) 25м и вольфрама (W) 20м, защитный слой способен выдержать непосредственный взрыв мощностью 10-15 Мт и в крайнем случае зона может служить бункером. Нужда в D классе в зоне небольшая (средняя потребность зоны 9-17 сотрудников класса D в месяц), в основном они используются для обучения сотрудников СБ, оставшиеся используются в лаборатории.</div>
 <hr>
 <div style="text-align: center;">
