--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <html>
 <body>
 <div class='header'>
@@ -18,7 +21,7 @@
 <br>
 <strong>Дата основания:</strong> [ОЖИДАЕТ РАСШИФРОВКИ]
 <p><strong>Директор зоны:</strong> Марков Э.</p>
-<div style='float: right;'><img src="https://i.ibb.co/7QwBDMZ/site78n.png" width='30%' alt="site78n" border="0"></div>
+<div style='float: right; width: 30%;'><img src="https://i.ibb.co/7QwBDMZ/site78n.png" width='100%%' alt="site78n" border="0"></div>
 <strong>Расположение:</strong> Аяно-Майский район, Хабаровский край, Россия
 <p><strong>Прикрытие:</strong> Метеостанция Курун-Урях</p>
 <p><strong>Функции Зоны:</strong> Содержание SCP объектов класса безопасный и евклид, исследование аномалий, обучение персонала, хранение аномальных предметов.</p>
@@ -28,7 +31,7 @@
 <div style="text-align: center;">
 <h2 id="toc4"><span>Помещения</span></h2>
 </div>
-<div style='float: right;'><a href="https://i.ibb.co/0B3YRtF/site78nplan.png"><img src="https://i.ibb.co/0B3YRtF/site78nplan.png" alt="план зоны 78N в разрезе" border="0"></a></div>
+<div style='float: right; width: 30%;'><a href="https://i.ibb.co/0B3YRtF/site78nplan.png"><img src="https://i.ibb.co/0B3YRtF/site78nplan.png" width='100%'alt="план зоны 78N в разрезе" border="0"></a></div>
 <strong>Поверхность:</strong><br>
 Главные офисы, жилые помещения, медицинский центр, складские помещения.
 <p><strong>Комплекс:</strong><br>
