--- a/shinigami.html
+++ b/shinigami.html
@@ -8,12 +8,12 @@ Online HTML, CSS and JavaScript editor to run code online.
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="shinigami.css" />
-  <title>Browser</title>
+  <title>shinigami-incident</title>
 </head>
 
 <body>
-  <div class='header'><div class='logo'><img src="https://i.ibb.co/J3zs36y/isd-logo.png" alt="isd-logo" width='100px' border="0"><p>Отдел Внутренней Безопасности</p></div></div>
-  <div style='max-width: 800px;margin: auto;'>
+  <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
+  <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
   <h1> 
     Write, edit and run HTML, CSS and JavaScript code online.
   </h1>
