--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
 </head>
 <html>
 <body>
