small updt shinigami

--- a/shinigami.html
+++ b/shinigami.html
@@ -8,6 +8,7 @@ Online HTML, CSS and JavaScript editor to run code online.
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="shinigami.css" />
+  <link rel="icon" href="https://i.ibb.co/yVTFNpX/isd.png">
   <title>shinigami-incident</title>
 </head>
 
