--- a/shinigami.html
+++ b/shinigami.html
@@ -14,15 +14,14 @@ Online HTML, CSS and JavaScript editor to run code online.
 
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
-  <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-  <h1> 
-    Write, edit and run HTML, CSS and JavaScript code online.
-  </h1>
-  <p>
-    Our HTML editor updates the webview automatically in real-time as you write code.
-  </p>
-    </div>
-    
+<div style='max-width: 800px;margin: auto;padding: 0.5em;'>
+  <button type="button" class="collapsible">Подтвердить Уровень Допуска</button>
+  <div class="content">
+   <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
+   <h3>ДАТА И ВРЕМЯ НАЧАЛА: 06/06/2021 09:28</h3>
+   <h3>МЕСТО ПРОИШЕСТВИЯ: ЗОНА 78N</h3>
+  </div>
+</div>
   <script src="script.js"></script>
 </body>
 
