--- a/shinigami.html
+++ b/shinigami.html
@@ -22,7 +22,7 @@ Online HTML, CSS and JavaScript editor to run code online.
    <h3>МЕСТО ПРОИШЕСТВИЯ: ЗОНА 78N</h3>
   </div>
 </div>
-  <script src="script.js"></script>
+  <script src="shinigami.js"></script>
 </body>
 
 </html>
