--- a/shinigami.html
+++ b/shinigami.html
@@ -16,7 +16,7 @@ Online HTML, CSS and JavaScript editor to run code online.
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
   <button type="button" class="collapsible">Подтвердить Уровень Допуска</button>
-  <div class="content">
+  <div class="slide-left">
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
    <h3>ДАТА И ВРЕМЯ НАЧАЛА: 06/06/2021 09:28</h3>
    <h3>МЕСТО ПРОИШЕСТВИЯ: ЗОНА 78N</h3>
