--- a/shinigami.html
+++ b/shinigami.html
@@ -15,47 +15,13 @@ Online HTML, CSS and JavaScript editor to run code online.
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-  <button type="button" class="collapsible">Подтвердить Уровень Допуска</button>
+  <center><button type="button" class="collapsible">Подтвердить Уровень Допуска</button>
+  </center>
   <div class="slide-left">
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
-   <h3>ДАТА И ВРЕМЯ НАЧАЛА: 06/06/2021 09:28</h3>
-   <h3>МЕСТО ПРОИШЕСТВИЯ: ЗОНА 78N</h3>
+   <h4><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</h4>
+   <h4><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</h4>
   </div>
-
-  
-  <div class="question">
-  <a href="#hide1" class="hide" id="hide1">First question</a>
-  <a href="#show1" class="show" id="show1">First question after click</a>
-  <div class="answer">
-    <p>Here is the answer</p>
-  </div>
-  </div>
-
-  <div class="question">
-  <a href="#hide2" class="hide" id="hide2">Second question</a>
-  <a href="#show2" class="show" id="show2">Second question after click</a>
-  <div class="answer">
-    <p>Here is the answer</p>
-  </div>
-  </div>
-
-  <div class="question">
-  <a href="#hide3" class="hide" id="hide3">Third question</a>
-  <a href="#show3" class="show" id="show3">Third question after click</a>
-  <div class="answer">
-    <p>Here is the answer</p>
-  </div>
-  </div>
-
-  <div class="question">
-  <a href="#hide4" class="hide" id="hide4">Fourth question</a>
-  <a href="#show4" class="show" id="show4">Fourth question after click</a>
-  <div class="answer">
-    <p>Here is the answer</p>
-  </div>
-  </div>
-
-
 </div>
   <script src="shinigami.js"></script>
 </body>
