--- a/shinigami.html
+++ b/shinigami.html
@@ -23,6 +23,34 @@ Online HTML, CSS and JavaScript editor to run code online.
    <h4><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</h4>
   </div>
 </div>
+
+
+<script type="text/javascript">
+function toggleMe(a) {
+   var e = document.getElementById(a);
+   var toggleIcon = document.getElementById('toggle-icon');
+   if(!e) return true;
+
+   if(e.style.display == "none") {
+      e.style.display = "block";
+      toggleIcon.innerHTML = '-';
+   }
+   else {
+      e.style.display = "none";
+      toggleIcon.innerHTML = '+';
+   }
+   return true;
+}
+</script>
+<p>
+  <input onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;" type="text" value="LINK TO EXPAND" />
+  <span id="toggle-icon">+</span>
+</p>
+<p id="para1" style="display: none;">
+   <strong><em>text text text text</em></strong>
+</p>
+
+
   <script src="shinigami.js"></script>
 </body>
 
