--- a/shinigami.html
+++ b/shinigami.html
@@ -15,17 +15,15 @@ Online HTML, CSS and JavaScript editor to run code online.
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-  
+<center>
 <p>
-  <input onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;" type="text" value="LINK TO EXPAND" />
+  <button onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;">Подтвердить Уровень Допуска</button>
+</center>
   <span id="toggle-icon">+</span>
 </p>
 <p id="para1" style="display: none;">
    text text text text
 </p>
-
-  <center><button type="button" class="collapsible">Подтвердить Уровень Допуска</button>
-  </center>
   <div class="slide-left">
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
    <h4><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</h4>
