--- a/shinigami.html
+++ b/shinigami.html
@@ -17,14 +17,11 @@ Online HTML, CSS and JavaScript editor to run code online.
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
 <center>
 <p>
-  <button onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;">Подтвердить Уровень Допуска</button>
+  <button class="button-0" onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;">Подтвердить Уровень Допуска</button>
+  <div class="button-1"id="toggle-icon">+</div>
+</p>
 </center>
-  <span id="toggle-icon">+</span>
-</p>
-<p id="para1" style="display: none;">
-   text text text text
-</p>
-  <div class="slide-left">
+  <div id="para1" style="display: none;" class="slide-left">
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
    <h4><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</h4>
    <h4><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</h4>
