--- a/shinigami.html
+++ b/shinigami.html
@@ -17,8 +17,8 @@ Online HTML, CSS and JavaScript editor to run code online.
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
 <center>
 <p>
-  <button class="button-0" onclick="return toggleMe('para1')" style="font-size:18px; color:#008080;">Подтвердить Уровень Допуска</button>
-  <div class="button-1"id="toggle-icon">+</div>
+  <button class="button-0" onclick="return toggleMe('para1')">Подтвердить Уровень Допуска</button>
+  <div class="button-1"id="toggle-icon">&nbsp;</div>
 </p>
 </center>
   <div id="para1" style="display: none;" class="slide-left">
