--- a/shinigami.html
+++ b/shinigami.html
@@ -16,6 +16,9 @@ Online HTML, CSS and JavaScript editor to run code online.
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
 <center>
+  <div style="">ВНИМАНИЕ</div>
+  <div style="">Данная информация секретна.</div>
+  <div style="">Нарушителей ждет неминуемое наказание</div>
 <p>
   <button class="button-0" onclick="return toggleMe('para1')">Подтвердить Уровень Допуска</button>
   <div class="button-1"id="toggle-icon">&nbsp;</div>
@@ -23,8 +26,8 @@ Online HTML, CSS and JavaScript editor to run code online.
 </center>
   <div id="para1" style="display: none;" class="slide-left">
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
-   <h4><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</h4>
-   <h4><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</h4>
+   <p><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</p>
+   <p><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</p>
   </div>
 </div>
   <script src="shinigami.js"></script>
