--- a/shinigami.html
+++ b/shinigami.html
@@ -16,9 +16,10 @@ Online HTML, CSS and JavaScript editor to run code online.
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
 <center>
-  <div style="">ВНИМАНИЕ</div>
-  <div style="">Данная информация секретна.</div>
-  <div style="">Нарушителей ждет неминуемое наказание</div>
+  <div class="warning">ВНИМАНИЕ</div>
+  <div>Данная информация секретна</div>
+  <div>Нарушителей ждет неминуемое наказание</div>
+<div style='font-family: monospace;'>[НЕОБХОДИМ УРОВЕНЬ ДОСТУПА 4/BSNK]</div>
 <p>
   <button class="button-0" onclick="return toggleMe('para1')">Подтвердить Уровень Допуска</button>
   <div class="button-1"id="toggle-icon">&nbsp;</div>
