--- a/shinigami.html
+++ b/shinigami.html
@@ -19,7 +19,7 @@ Online HTML, CSS and JavaScript editor to run code online.
   <div class="warning">ВНИМАНИЕ</div>
   <div>Данная информация секретна</div>
   <div>Нарушителей ждет неминуемое наказание</div>
-<div style='font-family: monospace;'>[НЕОБХОДИМ УРОВЕНЬ ДОСТУПА 4/BSNK]</div>
+<div style='font-family: monospace;margin: 1em 0;'>[НЕОБХОДИМ УРОВЕНЬ ДОСТУПА 4/ISD-SPEC]</div>
 <p>
   <button class="button-0" onclick="return toggleMe('para1')">Подтвердить Уровень Допуска</button>
   <div class="button-1"id="toggle-icon">&nbsp;</div>
