--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html>
 <body>
 <div class='header'>
-  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><p class='text-header'>Зона 78N</p>
+  <div class='logo-header'><img src="https://i.ibb.co/dW67VT2/lrp-big.png" width="100px" border="0"></div><div class='header-flex'><div class='text-header'>Зона 78N</div><div class='text-header1'>Российский Филиал</div></div>
 </div>
   <div style="center no-repeat ; float: center; border: solid 2px #000000; padding: 1px 15px; margin: 10px 10px 10px 0px; box-shadow: 0 1px 3px rgba(0,0,0,0);max-width: 800px;margin: auto;">
 <div style="text-align: center;">
