--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://i.ibb.co/dW67VT2/lrp-big.png">
+  <title>site78n/info</title>
 </head>
 <html>
 <body>
