--- a/shinigami.html
+++ b/shinigami.html
@@ -11,10 +11,10 @@
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-<center>
-  <div class="warning">ВНИМАНИЕ</div>
-  <div>Данная информация секретна</div>
-  <div>Нарушителей ждет неминуемое наказание</div>
+  <div style='text-align: center;'><div class="warning">ВНИМАНИЕ</div>
+  <div style='padding: 10px;font-weight: 500;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
+  </div>
+  <center>
 <div style='font-family: monospace;margin: 1em 0;'>[НЕОБХОДИМ УРОВЕНЬ ДОСТУПА 4/ISD-SPEC]</div>
 <p>
   <button class="button-0" onclick="return toggleMe('para1')">Подтвердить Уровень Допуска</button>
