--- a/shinigami.html
+++ b/shinigami.html
@@ -11,7 +11,7 @@
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-  <div style='text-align: center;'><div class="warning">ВНИМАНИЕ</div>
+  <div style='text-align: center;border: 2px solid;'><div class="warning">ВНИМАНИЕ</div>
   <div style='padding: 10px;font-weight: 500;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
   </div>
   <center>
