--- a/shinigami.html
+++ b/shinigami.html
@@ -11,6 +11,7 @@
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
+  <h1 style='border-bottom: 2px solid grey;'>Отчеты об инцидентах: Зона 78N</h1>
   <div style='text-align: center;border: 2px solid;'><div class="warning">ВНИМАНИЕ</div>
   <div style='padding: 10px;font-weight: 500;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
   </div>
