--- a/shinigami.html
+++ b/shinigami.html
@@ -26,6 +26,8 @@
    <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
    <p><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</p>
    <p><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</p>
+   <p><b>УСТАНОВЛЕННАЯ ПРИЧИНА:</b> Сговор и последующий саботаж штатной работы учреждения с целью сокрытия последствий нарушения ПВК данной реальности.</p>
+    <p><b>ПРЕАМБУЛА:</b> </p>
   </div>
 </div>
   <script src="shinigami.js"></script>
