--- a/shinigami.html
+++ b/shinigami.html
@@ -12,8 +12,8 @@
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
   <h1 style='border-bottom: 2px solid grey;font-weight: 400;'>Отчеты об инцидентах:</h1>
-  <div style='text-align: center;border: 2px solid;'><div class="warning">ВНИМАНИЕ</div>
-  <div style='padding: 10px;font-weight: 500;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
+  <div style='text-align: center;border: 2px outset;'><div class="warning">ВНИМАНИЕ</div>
+  <div style='padding: 10px;font-weight: 500;color: black;background: #e8e8e8;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
   </div>
   <center>
 <div style='font-family: monospace;margin: 1em 0;'>[НЕОБХОДИМ УРОВЕНЬ ДОСТУПА 4/ISD-SPEC]</div>
