--- a/shinigami.html
+++ b/shinigami.html
@@ -11,7 +11,7 @@
 <body>
   <div class='header'><div class='logo'><p>Отдел Внутренней Безопасности</p></div></div>
 <div style='max-width: 800px;margin: auto;padding: 0.5em;'>
-  <h1 style='border-bottom: 2px solid grey;font-weight: 400;'>Отчеты об инцидентах:</h1>
+  <h1>Отчеты об инцидентах:</h1>
   <div style='text-align: center;border: 2px outset;'><div class="warning">ВНИМАНИЕ</div>
   <div style='padding: 10px;font-weight: 500;color: black;background: #e8e8e8;'>Данная информация секретна. Нарушителей ждет неминуемое наказание.</div>
   </div>
@@ -23,7 +23,7 @@
 </p>
 </center>
   <div id="para1" style="display: none;" class="slide-left">
-   <h1>ИНЦИДЕНТ 78N-SHINIGAMI</h1>
+   <h2>ИНЦИДЕНТ 78N-SHINIGAMI</h2>
    <p><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</p>
    <p><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</p>
    <p><b>УСТАНОВЛЕННАЯ ПРИЧИНА:</b> Сговор и последующий саботаж штатной работы учреждения с целью сокрытия последствий нарушения ПВК данной реальности.</p>
