--- a/shinigami.html
+++ b/shinigami.html
@@ -25,9 +25,11 @@
   <div id="para1" style="display: none;" class="slide-left">
    <h2>ИНЦИДЕНТ 78N-SHINIGAMI</h2>
    <p><b>ДАТА И ВРЕМЯ НАЧАЛА:</b> 06/06/2021 09:28</p>
-   <p><b>МЕСТО ПРОИШЕСТВИЯ:</b> ЗОНА 78N</p>
+   <p><b>МЕСТО ПРОИСШЕСТВИЯ:</b> ЗОНА 78N</p>
    <p><b>УСТАНОВЛЕННАЯ ПРИЧИНА:</b> Сговор и последующий саботаж штатной работы учреждения с целью сокрытия последствий нарушения ПВК данной реальности.</p>
-    <p><b>ПРЕАМБУЛА:</b> </p>
+    <p><b>ПРЕАМБУЛА:</b> В данном отчете представлены доклады системы безопасности, сведения очевидцев и непосредственных участников инцидента, различные ведомственные документы и статьи объектов, непосредственно задействованных в инциденте. Всё, что поможет восстановить картину произошедшего в тот день. Имена и личные данные сотрудников не изменены, все отметки времени точны насколько это возможно. Будьте предельно внимательны, не разглашайте конфиденциальную информациюю коллегам без соответсвующего уровня допуска и разрешения на ознакомление с документами.</p>
+    <h3>Начальный период</h3>
+    <p>Рабочий день начался в 00:05 по местному времени, согласно протоколу, все сотрудники Научной службы (далее "НС"), Инженерно-технической службы (далее "И-ТС"), Административной службы (далее "АС") младшего звена, Медицинской службы (далее "МС") и обслуживающий персонал покинули свои посты за 3 часа до этого, а у персонала класса-D наступал отбой. Все действовали строго распорядку и нарушений со стороны персонала замечено не было. Служба безопасности (далее “СБ”) подразделения KILO-10 готовилась к смене, сменить её должны были сотрудники СБ подразделения LIMA-13, которые прибыли на гермоворота B с оппозданием в 3 минуты. Смена происходила в обычном темпе и все посты охраны, караула, патруля и надзора были заняты LIMA-13 в 00:52.
   </div>
 </div>
   <script src="shinigami.js"></script>
