--- a/220-21.html
+++ b/220-21.html
@@ -8,8 +8,14 @@
   <title>doc-220-21</title>
 </head>
 <body>
-  <div class='header'>test</div>
-<div class='document'>Hello</div>
+  <div class='header'>
+    <div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0"></div>
+    <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
+  </div>
+<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;'>hello
+</div>
+
+</div>
 </body>
 
 </html>
