--- a/220-21.html
+++ b/220-21.html
@@ -9,10 +9,14 @@
 </head>
 <body>
   <div class='header'>
-    <div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0"></div>
+    <div style="display: flex; flex-wrap: nowrap;"><div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0" width="100%"></div>
     <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
   </div>
-<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;'>hello
+   <div style="font: monospace;">| Зона содержания 78N</div>
+</div>
+<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;'>
+  <h1>Внутренние дела</h1>
+  <h2>Текст пустышка</h2>
 </div>
 
 </div>
