--- a/220-21.html
+++ b/220-21.html
@@ -14,7 +14,7 @@
   </div>
    <div class="site78n-notice">Зона содержания 78N</div>
 </div>
-<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;'>
+<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
   <h1>Внутренние дела</h1>
   <h2>Текст пустышка</h2>
 </div>
