--- a/220-21.html
+++ b/220-21.html
@@ -20,6 +20,7 @@
 </div>
 
 </div>
+<div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии Creative Commons Attribution-ShareAlike 3.0 License.</div>
 </body>
 
 </html>
