--- a/220-21.html
+++ b/220-21.html
@@ -17,10 +17,11 @@
 <div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
   <h1>Внутренние дела</h1>
   <h2>Текст пустышка</h2>
+  Ну и тут типа написано чета, да там, эта, эт самое.... ну как там его бля.... да хуй знает чеееее бля.................................................................
 </div>
 
 </div>
-<div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии Creative Commons Attribution-ShareAlike 3.0 License.</div>
+<div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a></div>
 </body>
 
 </html>
