--- a/220-21.html
+++ b/220-21.html
@@ -14,8 +14,11 @@
   </div>
    <div class="site78n-notice">Зона содержания 78N</div>
 </div>
+
+
 <div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
   <h1>Внутренние дела</h1>
+  <div class="notice"><div style='font-style: monospace;'>Проверка</div></div>
   <h2>Текст пустышка</h2>
   Ну и тут типа написано чета, да там, эта, эт самое.... ну как там его бля.... да хуй знает чеееее бля.................................................................
 </div>
