--- a/220-21.html
+++ b/220-21.html
@@ -18,7 +18,7 @@
 
 <div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
   <h1>Внутренние дела</h1>
-  <div class="notice"><div style='font-style: monospace;'>Проверка</div></div>
+  <div class="notice"><div>≣ Необходим 4 УД</div><div>&#128100; agent Querl</div></div></div>
   <h2>Текст пустышка</h2>
   Ну и тут типа написано чета, да там, эта, эт самое.... ну как там его бля.... да хуй знает чеееее бля.................................................................
 </div>
