--- a/220-21.html
+++ b/220-21.html
@@ -16,13 +16,19 @@
 </div>
 
 
-<div class='document'><div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
-  <h1>Внутренние дела</h1>
-  <div class="notice"><div>≣ Необходим 4 УД</div><div>&#128100; agent Querl</div></div></div>
-  <h2>Переаттестация сотрудников СБ</h2>
-  <div style='border: 2px dashed #525151; padding: 1em;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Я, Начальник службы безопасности зоны 78N, Такаяма Нэро, принимаю решение об окончании испытательного срока рядового службы безопасности Дэниела О'Флинна, и о присвоении последнему звания капрала службы безопасности, а так же о переводе его на новую должность.</p><div style='text-align: end;'><b>Утверждено:</b> главой отдела кадров административной службы зоны 78N, Гарденом Алексом Эвером</div>
-</div>
-</div>
+<div class='document'>
+  <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
+   <h1>Внутренние дела</h1>
+   <div class="notice"><div>≣ Необходим 4 УД</div><div>&#128100; agent Querl</div>
+   </div>
+   <h2>Переаттестация сотрудников СБ</h2>
+     <div style='border: 2px dashed #525151; padding: 1em;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Я, Начальник службы безопасности зоны 78N, Такаяма Нэро, принимаю решение об окончании испытательного срока рядового службы безопасности Дэниела О'Флинна, и о присвоении последнему звания капрала службы безопасности, а так же о переводе его на новую должность.</p><div style='text-align: end;'><b>Утверждено:</b> главой отдела кадров административной службы зоны 78N, Гарденом Алексом Эвером</div>
+     </div>
+  </div>
+</DIV>
+
+
+
 <div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a></div>
 </body>
 
