--- a/220-21.html
+++ b/220-21.html
@@ -12,14 +12,14 @@
     <div style="display: flex;align-items: center;"><div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0" width="100%"></div>
     <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
   </div>
-   <div class="site78n-notice">Зона содержания 78N</div>
+   <div class="site78n-notice">Каталог зоны 78N</div>
 </div>
 
 
 <div class='document'>
-  <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 6.6em;padding-left: 0.5em;padding-right: 0.5em;'>
+  <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 10%;padding-left: 0.5em;padding-right: 0.5em;'>
    <h1>Внутренние дела</h1>
-   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>&#128100; agent Querl</div>
+   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>10.06.2021</div>
    </div>
    <h2>Переаттестация сотрудников СБ</h2>
      <div style='border: 2px dashed #525151; padding: 1em;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Я, Начальник службы безопасности зоны 78N, Такаяма Нэро, принимаю решение об окончании испытательного срока рядового службы безопасности Дэниела О'Флинна, и о присвоении последнему звания капрала службы безопасности, а так же о переводе его на новую должность.</p><div style='text-align: end;'><b>Утверждено:</b> главой отдела кадров административной службы зоны 78N, Гарденом Алексом Эвером</div>
