--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -22,7 +22,7 @@
    <h1>Личное дело майора Иртеньева</h1>
    <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>Vysserath</div><div style='margin-right: 1.5em;'>18.09.2021</div></div>
 
-<div style='border: 2px solid #525151; border-radius: 5px;'>
+<div class='dossier'>
 <center>Дата: [Отредактировано]<br>
 Уровень допуска к документации: 4<br>
 Документ lv4-20157384<br>
@@ -54,8 +54,14 @@
 
 <p style='color: crimson;'>ВНИМАНИЕ! Дальнейшая информация ограничена 4 уровнем допуска. Для получения доступа обратитесь к руководителю Участка Временного Содержания 19F директору Капице.</p>
 <button class="button-0" onclick="return toggleMe('para1')">[ПОДТВЕРДИТЬ ДОСТУП]</button>
-  <div class="button-1"id="toggle-icon">&nbsp;</div>
-
+  <div class="button-1"id="toggle-icon">&nbsp;</div><div id="para1" style="display: none;">
+<p style='color:crimson;'>.<br>
+.<br>
+.<br>
+[ДОСТУП ПОДТВЕРЖДЕН]</p>
+После возвращения в Россию Александр Иртеньев был замечен Фондом и завербован в МОГ Йота-10 ("Проклятые федералы"). С 2009 по 2018 года работал в ФСО РФ в качестве внедренного агента. <span style='color: black;background: black;'>За время службы с его помощью было установлено 11 терактов, имеющих связь с Повстанцами хаоса, 10 из них предотвращены. В 2018 году был назначен Начальником службы безопасности недавно построенного Участка Временного Содержания объектов 19F, чем и вызван уход в отставку.</span></div>
+<hr>
+<div style="font-family: monospace;text-align: center;margin-top: 1em;margin-bottom: 1em">SECURE. CONTAIN. PROTECT.</div>
 </div>
   </div>
 </DIV>
