--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -69,6 +69,6 @@
 
 
 <div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a></div>
+<script src="личное-дело-майора-иртеньева.js"></script>
 </body>
-
 </html>
