--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -29,7 +29,7 @@
 Субъект: 9450 | Александр Иртеньев</center>
 <hr>
 <h2>Основная информация:</h2>
-<div style='float: right;width: 30%;'><img src="https://i.ibb.co/WcD3txM/irteniev.jpg" alt="Фотография майора Иртеньева сделанная ██.██.████ при вступлении на службу в [УДАЛЕНО]" width='100%' border="0"></div>
+<div style='float: right;width: 40%; margin: 0em 0em 0em 1em;'><img src="https://i.ibb.co/WcD3txM/irteniev.jpg" alt="Фотография майора Иртеньева сделанная ██.██.████ при вступлении на службу в [УДАЛЕНО]" width='100%' border="0"></div>
 <p><strong>Имя:</strong> Иртеньев Александр Николаевич</p>
 <p><strong>Отметка оператора:</strong> SG-9450-AI</p>
 <p><strong>Уровень допуска:</strong> 4</p>
