--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -29,7 +29,7 @@
 Субъект: 9450 | Александр Иртеньев</center>
 <hr>
 <h2>Основная информация:</h2>
-<div style='float: right;width: 40%; margin: 0em 0em 0em 1em;'><img src="https://i.ibb.co/WcD3txM/irteniev.jpg" alt="Фотография майора Иртеньева сделанная ██.██.████ при вступлении на службу в [УДАЛЕНО]" width='100%' border="0"></div>
+<div style='float: right;width: 40%; margin: 0em 0em 0em 1em;'><img src="https://i.ibb.co/WcD3txM/irteniev.jpg" alt="Фотография майора Иртеньева сделанная ██.██.████ при вступлении на службу в [УДАЛЕНО]" width='100%' border="0"></div><div style="text-align:left;">
 <p><strong>Имя:</strong> Иртеньев Александр Николаевич</p>
 <p><strong>Отметка оператора:</strong> SG-9450-AI</p>
 <p><strong>Уровень допуска:</strong> 4</p>
@@ -47,7 +47,7 @@
 <strong>Телосложение:</strong> Мезоморф<br>
 <strong>Место рождения:</strong> Озерск, Россия<br>
 <strong>Раса:</strong> Европеоид<br>
-<strong>Национальность:</strong> Русский</tt>
+<strong>Национальность:</strong> Русский</tt></div>
 <h2>Краткая характеристика:</h2>
 <p>Майор Александр Иртеньев является мужчиной европеоидной расы с голубыми глазами и русыми волосами. Много внимания уделяет эффективности, циничен, лицемерен, обладает предикативной эмпатией. Он довольно общителен и легко находит общий язык с людьми, скрывая свои негативные черты личности при необходимости. Майор Иртеньев обладает лидерскими качествами, способен оперативно оценить ситуацию и…</p>
 <p>Иртеньев Александр Николаевич родился 2 Марта 1983 года в городе Озерск, Россия. Отец, Иртеньев Николай Ильич служил в [УДАЛЕНО]. Мать, Иртеньева Лидия Михайловна была домохозяйкой. Окончил школу №██, 11 классов. Прошёл военную службу по призыву, с 2002 по 2009 год служил по контракту в местах боевых действий в ██████████ █████.</p>
