--- a/личное-дело-майора-иртеньева.html
+++ b/личное-дело-майора-иртеньева.html
@@ -22,6 +22,8 @@
    <h1>Личное дело майора Иртеньева</h1>
    <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>Vysserath</div><div style='margin-right: 1.5em;'>18.09.2021</div></div>
 
+<div class='warn'>[ДАННЫЙ ФАЙЛ НАХОДИТСЯ В АРХИВЕ]<br>[ПРЕДСТАВЛЕННАЯ ИНОФРМАЦИЯ НЕДЕЙСТВИТЕЛЬНА]</div>
+
 <div class='dossier'>
 <center>Дата: [Отредактировано]<br>
 Уровень допуска к документации: 4<br>
