--- a/220-21.html
+++ b/220-21.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="220-21.css" />
-  <link rel="icon" href="https://i.ibb.co/yVTFNpX/isd.png">
+  <link rel="icon" href="https://i.ibb.co/Gxk4Lny/RAISA1.png">
   <title>doc-220-21</title>
 </head>
 <body>
