--- a/допрос-78-14-326.html
+++ b/допрос-78-14-326.html
@@ -37,6 +37,12 @@
 <p><strong>О'Флинн:</strong> Около полугода.</p>
 <p><strong>Мэллоу:</strong> Как долго вы работаете в зоне 78N?</p>
 <p><strong>О'Флинн:</strong> 25 неполных месяцев.</p>
+<p><strong>Мэллоу:</strong> Кто крайним занимал должность начальника службы безопасности Зоны 78N?</p>
+<p><strong>О'Флинн:</strong> Последним что-ли… Старший лейтенант Хлебушков.</p>
+<p><strong>Мэллоу:</strong> Были ли у вас с ним связи, помимо рабочих?</p>
+<p><strong>О'Флинн:</strong> Никак нет.</p>
+<p><strong>Мэллоу:</strong> Вам известна причина, по которой с этой должности был смещен Майор Такаяма?</p>
+<p><strong>О'Флинн:</strong> Никак нет.</p>
 <p><strong>Мэллоу:</strong> Случалось ли такое, что за время службы, вы исполняли не совсем легитимные приказы своего непосредственного начальства?</p>
 <p><strong>О'Флинн:</strong> Простите?</p>
 <strong>Мэллоу:</strong> Кхм… Так… Каков ваш родной язык?
