--- a/допрос-78-14-326.html
+++ b/допрос-78-14-326.html
@@ -12,7 +12,7 @@
     <div style="display: flex;align-items: center;"><div class="logo"><img src="https://i.ibb.co/Gxk4Lny/RAISA1.png" border="0" width="100%"></div>
     <div class="header1"><div class="head-text1">Архив АПАИБ</div><div class="head-text2">Администрация по архивно-информационной безопасности</div></div>
   </div>
-   <div class="site78n-notice">Каталог зоны 78N</div>
+   <div class="site78n-notice">Каталог Зоны 78N</div>
 </div>
 
 
@@ -28,14 +28,14 @@
 <h4>Допрашиваемый: Дэниел О'Флинн</h4>
 <h4>Предмет допроса: причастность к инциденту 78N-SHINIGAMI</h4>
 <div style='border: 2px dashed #525151; padding: 1em;'>
-<p><strong>Мэллоу:</strong> Оставляю пространство на записи… 3… 2… 1… Агент Мэллоу для протокола, допрос сотрудника службы безопасности зоны 78N Дэниела О'Флинна начат в 07:38 утра 09/06/2021, с этого момента отсчитывается начало процедуры допроса.<br>
+<p><strong>Мэллоу:</strong> Оставляю пространство на записи… 3… 2… 1… Агент Мэллоу для протокола, допрос сотрудника службы безопасности Зоны 78N Дэниела О'Флинна начат в 07:38 утра 09/06/2021, с этого момента отсчитывается начало процедуры допроса.<br>
 Дэниел, здравствуйте.</p>
 <p><strong>О'Флинн:</strong> Здравствуйте, сэр.</p>
 <p><strong>Мэллоу:</strong> Назовите ваше звание и должность.</p>
-<p><strong>О'Флинн:</strong> Капрал службы безопасности, часовой при КПП административного крыла зоны 78N.</p>
+<p><strong>О'Флинн:</strong> Капрал службы безопасности, часовой при КПП административного крыла Зоны 78N.</p>
 <p><strong>Мэллоу:</strong> Как долго вы пробыли на этой должности?</p>
 <p><strong>О'Флинн:</strong> Около полугода.</p>
-<p><strong>Мэллоу:</strong> Как долго вы работаете в зоне 78N?</p>
+<p><strong>Мэллоу:</strong> Как долго вы работаете в Зоне 78N?</p>
 <p><strong>О'Флинн:</strong> 25 неполных месяцев.</p>
 <p><strong>Мэллоу:</strong> Кто крайним занимал должность начальника службы безопасности Зоны 78N?</p>
 <p><strong>О'Флинн:</strong> Последним что-ли… Старший лейтенант Хлебушков.</p>
