--- a/допрос-78-14-326.html
+++ b/допрос-78-14-326.html
@@ -50,13 +50,31 @@
 <p><strong>Мэллоу:</strong> Then we'll proceed in English.<br>
 Has it ever happened that during your service, you have carried out orders of your immediate superiors that were not entirely legitimate?</p>
 <p><strong>О'Флинн:</strong> I can’t know that, sir.</p>
-<p><strong>Мэллоу:</strong> Too bad. Then, what were you doing on the night of May 25th?</p>
-<p><strong>О'Флинн:</strong> </p>
-
-
+<p><strong>Мэллоу:</strong> Then, I must ask you, do you think that the arrest of senior researcher Medikovsky was justified?</p>
+<p><strong>О'Флинн:</strong> As far as I know, sir, that was a direct order from the facility manager Antony Markov.</p>
+<p><strong>Мэллоу:</strong> Was it justified?</p>
+<p><strong>О'Флинн:</strong> No, sir, an arrest is not possible without a warrant.</p>
+<p><strong>Мэллоу:</strong> That’s right. So, in your opinion, what was the reason behind his arrest?</p>
+<p><strong>О'Флинн:</strong> Markov's Personal Initiative.</p>
+<p><strong>Мэллоу:</strong> In other words, it's lawlessness.</p>
+<p><strong>О'Флинн:</strong> I guess… You're right.</p>
+<p><strong>Мэллоу:</strong> That’s settled;<br>
+Now, do you believe that the upper executive staff of the Site 78N was compromised for the personal benefit of Markov himself?</p>
+<p><strong>О'Флинн:</strong> What are you leading to?</p>
+<p><strong>Мэллоу:</strong> I'm the one asking questions here.</p>
+<p><strong>О'Флинн:</strong> I apologize, sir.</p>
+<p><strong>Мэллоу:</strong> I will repeat my question; Do you believe that the upper executive staff of the Site 78N was compromised for the personal benefit of Director Markov?</p>
+<p><strong>О'Флинн:</strong> Well… Yes, I do believe in that.</p>
+<p><strong>Мэллоу:</strong> Who else have you noticed unusual behavior/non-compliance with protocols in?</p>
+<p><strong>О'Флинн:</strong> Ugh… Probably Dr. Selh, Ph.D Raetman, Limited Containment Zone manager Broman, Items Containment Zone manager Tsyplakoff, and maybe Head of the Maintenance Department Anitu. That’s all I can think of.</p>
+<p><strong>Мэллоу:</strong> Right… So there's more?</p>
+<p><strong>О'Флинн:</strong> Probably not. Most of the middle and junior staff had no idea of this coup.</p>
+<p><strong>Мэллоу:</strong> Well… That is all, for now at least. Thank you Daniel.</p>
+<p><strong>О'Флинн:</strong> My pleasure, До свидания.</p>
+<p><strong>Мэллоу:</strong> Это вряд ли...<br>Агент Меллоу для протокола, допрос сотрудника службы безопасности зоны 78N Дэниела О'Флинна был окончен в 07:54 утра 09/06/2021. Оставляю пространство на записи… 3… 2… 1…</p>
 </div>
-
-
+<h3>Примечание к допросу №78-14-326</h3>
+В ходе расследования, комиссия ОВБ по инциденту 78N-SHINIGAMI пришла к выводу, что причасность сотрудника SO-9420-DO к вышеуказанному инциденту является косвенной. Исходя из формулировки О'Флинна касательно инцидента (coup - путч), субъект, по всей видимости, и сам не знает полноту произошедшего. В словах субъекта не было найдено противоречий со следствием. Данные им показания во многом совпадают с отчётом расследования.<br>После окончания расследования, уполномоченным агентом МГРК было вынесено решение о награждении сотрудника SO-9420-DO наградным пистолетом H&K P30 9x19, в качестве поощрения за сотрудничество, лояльность и извинения за ошибочное содержание под стражей.
 
      </div>
  </div>
