--- a/220-21.html
+++ b/220-21.html
@@ -29,7 +29,7 @@
 
 
 
-<div class='license'>Данный сайт не является официальным сайтом Funclub Hard Role-Play, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a></div>
+<div class='license'>Данный сайт не является официальным сайтом <a href='https://hrp.funclub.pro/'>Funclub Hard Role-Play</a>, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a>.</div>
 </body>
 
 </html>
