--- a/220-21.html
+++ b/220-21.html
@@ -22,7 +22,28 @@
    <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>10.06.2021</div>
    </div>
    <h2>Переаттестация сотрудников СБ</h2>
-     <div style='border: 2px dashed #525151; padding: 1em;'><span style="font-weight: bold;font-size: larger;margin-bottom: 0.5em">Приказ №78-14-220420</span><p>Я, Начальник службы безопасности зоны 78N, Такаяма Нэро, принимаю решение об окончании испытательного срока рядового службы безопасности Дэниела О'Флинна, и о присвоении последнему звания капрала службы безопасности, а так же о переводе его на новую должность.</p><div style='text-align: end;'><b>Утверждено:</b> главой отдела кадров административной службы зоны 78N, Гарденом Алексом Эвером</div>
+     <!-- Tab links -->
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+</div>
+<!-- Tab content -->
+<div id="London" class="tabcontent">
+  <h3>London</h3>
+  <p>London is the capital city of England.</p>
+</div>
+
+<div id="Paris" class="tabcontent">
+  <h3>Paris</h3>
+  <p>Paris is the capital of France.</p>
+</div>
+
+<div id="Tokyo" class="tabcontent">
+  <h3>Tokyo</h3>
+  <p>Tokyo is the capital of Japan.</p>
+</div>
+     
      </div>
   </div>
 </DIV>
