--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -51,6 +51,7 @@
 
 
 <div class='license'>Данный сайт не является официальным сайтом <a href='https://hrp.funclub.pro/'>Funclub Hard Role-Play</a>, и существует согласно лицензии.<br> Пока не указано иное, содержимое этой страницы распространяется по лицензии <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">Creative Commons Attribution-ShareAlike 3.0 License</a>.</div>
+<script src="Дополнительные сведенья.js"></script>
 </body>
 
 </html>
