--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="220-21.css" />
   <link rel="icon" href="https://i.ibb.co/Gxk4Lny/RAISA1.png">
-  <title>doc-220-21</title>
+  <title>Дополнительные сведенья</title>
 </head>
 <body>
   <div class='header'>
@@ -19,9 +19,12 @@
 <div class='document'>
   <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 10%;padding-left: 0.5em;padding-right: 0.5em;'>
    <h1>Внутренние дела</h1>
-   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>10.06.2021</div>
+   <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>25.06.2021</div>
    </div>
-   <h2>Переаттестация сотрудников СБ</h2>
+   <h2>Дополнительные сведенья</h2>
+  <h3>Дэниел О'Флинн
+  <h3>
+
      <!-- Tab links -->
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'London')">London</button>
