--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -27,24 +27,28 @@
 
      <!-- Tab links -->
 <div class="tab">
-  <button class="tablinks" onclick="openCity(event, 'London')">London</button>
-  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
-  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Tokyo</button>
+  <button class="tablinks" onclick="openCity(event, 'London')">Расш. Досье</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Мед. Справка</button>
+  <button class="tablinks" onclick="openCity(event, 'Tokyo')">Отзывы</button>
 </div>
 <!-- Tab content -->
 <div id="London" class="tabcontent">
-  <h3>London</h3>
-  <p>London is the capital city of England.</p>
+  <h3>Расширенное досье</h3>
+  <p class='tab-text'>Подробная характеристика О’Флинна<br>
+Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
+<br>
+Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
+</p>
 </div>
 
 <div id="Paris" class="tabcontent">
-  <h3>Paris</h3>
-  <p>Paris is the capital of France.</p>
+  <h3>Медицинская справка</h3>
+  <p class='tab-text'>Paris is the capital of France.</p>
 </div>
 
 <div id="Tokyo" class="tabcontent">
-  <h3>Tokyo</h3>
-  <p>Tokyo is the capital of Japan.</p>
+  <h3>Отзывы сотрудников</h3>
+  <p class='tab-text'>Tokyo is the capital of Japan.</p>
 </div>
      
      </div>
