--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -18,12 +18,10 @@
 
 <div class='document'>
   <div style='max-width: calc(70ch + 3.24em); margin: auto;padding-top: 10%;padding-left: 0.5em;padding-right: 0.5em;'>
-   <h1>Внутренние дела</h1>
+   <h1>Дополнительные сведенья</h1>
    <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>25.06.2021</div>
    </div>
-   <h2>Дополнительные сведенья</h2>
-  <h3>Дэниел О'Флинн
-  <h3>
+   <h2>Дэниел О'Флинн</h2>
 
      <!-- Tab links -->
 <div class="tab">
@@ -34,8 +32,8 @@
 <!-- Tab content -->
 <div id="London" class="tabcontent">
   <h3>Расширенное досье</h3>
-  <p class='tab-text'>Подробная характеристика О’Флинна<br>
-Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
+  <p class='tab-text'><h4>Подробная характеристика О’Флинна</h4>
+Дэниел О’Флинн Коналл — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
 <br>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
 </p>
