--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -41,7 +41,26 @@
 
 <div id="Paris" class="tabcontent">
   <h3>Медицинская справка</h3>
-  <p class='tab-text'>Paris is the capital of France.</p>
+  <p class='tab-text'>
+<p><i>Субъект: О'Флинн Дэниел<br>
+Дата: 14/05/2019</i></p>
+<h5>Антропометрические данные:</h5>
+<p>Пол — Мужской<br>
+Рост — 186 см<br>
+Вес — 75 кг<br>
+Телосложение — Мезоморф<br>
+Национальность — Ирландец<br>
+Группа крови: A (II) Rh(+)</p>
+
+<h5>Психологический анализ:</h5>
+<p>Темперамент — флегматический<br>
+Тип личности — психастенический<br>
+Присутствуют признаки алекситимии второго типа, но полученных данных недостаточно для подтверждения диагноза.</p>
+
+Стенограмма диалога с главным психологом Зоны 78N, Юки-чико Юри:<br>
+
+<strong>Примечание:</strong>
+</p>
 </div>
 
 <div id="Tokyo" class="tabcontent">
