--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -23,6 +23,8 @@
    </div>
    <h2>Дэниел О'Флинн</h2>
 
+   <div style='font-family: monospace;color: white; background: #ff6d00;border: black 2px solid;margin-top: 1em; margin-bottom: 2em;padding: 0.5em; text-align: center;'>Нижеперечисленные файлы содержат некоторую информацию касательно субъекта, недоступную непосредственно в досье. АПАИБ гарантирует сохранность, конфиденциальность и целостность представленной информации. Как работник архива, вы подтверждаете соглашение о неразглашении личных данных сотрудников Фонда SCP.<div>
+
      <!-- Tab links -->
 <div class="tab">
   <button class="tablinks" onclick="openCity(event, 'London')">Расш. Досье</button>
