--- a/Дополнительные сведенья.html
+++ b/Дополнительные сведенья.html
@@ -21,7 +21,7 @@
    <h1>Дополнительные сведенья</h1>
    <div class="notice"><div style='margin-right: 1.5em;'>≣ Необходим 4 УД</div><div style='margin-right: 1.5em;'>агент Кёрли</div><div style='margin-right: 1.5em;'>25.06.2021</div>
    </div>
-   <h2>Дэниел О'Флинн</h2>
+   <h2>XX-9420-DO | Дэниел О'Флинн (Коналл)</h2>
 
    <div class='persona'>Нижеперечисленные файлы содержат некоторую информацию касательно субъекта, недоступную непосредственно в досье. АПАИБ гарантирует сохранность, конфиденциальность и целостность представленной информации. Как работник архива, вы подтверждаете соглашение о неразглашении личных данных сотрудников Фонда SCP.</div>
 
@@ -35,7 +35,7 @@
 <div id="London" class="tabcontent">
   <h3>Расширенное досье</h3>
   <p class='tab-text'><h4>Подробная характеристика О’Флинна</h4>
-Дэниел О’Флинн Коналл — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
+Дэниел О’Флинн — мужчина 28 лет, рост выше среднего, брюнет с карими глазами. Имеет второе имя - Коналл. Орлиный нос, лицо прямоугольное с ярко выраженными скулами. Британец, но сам себя называет ирландцем. Попал в ряды фонда благодаря отличной характеристике, данной ему бывшим командиром, под чьим командованием он служил в Сирии. Служил в RAF (Королевские военно-воздушные силы Великобритании), умеет пилотировать легкие двухдвигательные и одномоторные вертолеты. Намного лучше себя показал, как пехотинец, снайпер или оператор бортового пулемета. Неконфликтный, строго выполняет приказы вышестоящих, надежный боец. Негативных привычек обнаружено не было. На собеседовании проявил хорошие знания русского языка, слегка знает арабский и немецкий. Хорошо обращается с оружием блока НАТО, особенно платформы AR-15 и SA-80. Имеет небольшой опыт использования оружия платформы AK. 
 <br>
 Субъект проходил первоначальный курс обучения в Зоне 44 в Эссексе, Англия. По завершению КМБ был перенаправлен в Зону 80K, ввиду переизбытка кадров на месте и недостатка его в Зонах проекта FC. Благодаря знанию русского языка быстро освоился и почти сразу был перенаправлен в Зону 78N, уже на полноценную должность.
 </p>
